pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__027-entity_and_numeric_character_references.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/027-entity_and_numeric_character_references.md
---
" ആ ಫ
